website/css/index.css
body {
    margin: 0;
    overflow-x: hidden;
    background-color: #000;
    color: #fff;
    font-family: 'Arial', sans-serif
}

.lines {
    position: absolute;
    top: -1.5%;
    left: 0;
    right: 0;
    height: 105%;
    margin: auto;
    width: 90vw;
    opacity: .8
}

.line {
    position: absolute;
    width: 1px;
    height: 105%;
    top: -5px;
    left: 50%;
    background: rgb(255 255 255 / .05);
    overflow: hidden
}

.line::after {
    content: "";
    display: block;
    position: absolute;
    height: 15vh;
    width: 100%;
    opacity: .8;
    top: 0%;
    transform: translateY(-50%);
    left: 0;
    background: linear-gradient(to bottom, #fff0 0%, #ffffff 75%, #ffffff 100%);
    -webkit-animation: drop 7s 0s infinite;
    animation: drop 7s 0s infinite;
    -webkit-animation-fill-mode: forwards;
    animation-fill-mode: forwards;
    -webkit-animation-timing-function: cubic-bezier(.4, .26, 0, .97);
    animation-timing-function: cubic-bezier(.4, .26, 0, .97)
}

.line:nth-child(1) {
    left: 12.5%
}

.line:nth-child(1)::after {
    -webkit-animation-delay: 2s;
    animation-delay: 2s;
    opacity: .4
}

.line:nth-child(3) {
    left: 87.5%
}

.line:nth-child(3)::after {
    -webkit-animation-delay: 2.5s;
    animation-delay: 2.5s;
    opacity: .4
}

@-webkit-keyframes drop {
    0% {
        transform: translateY(-50%)
    }

    100% {
        transform: translateY(1200%)
    }
}

@keyframes drop {
    0% {
        transform: translateY(-50%)
    }

    100% {
        transform: translateY(1200%)
    }
}

canvas {
    display: block;
    width: 100%;
    height: 100%
}

#ui {
    position: absolute;
    bottom: 30px;
    display: flex;
    align-items: center;
    justify-content: space-around;
    gap: 1rem;
    left: 0;
    top: auto;
    width: 100%;
    text-align: center;
    z-index: 100;
    pointer-events: none;
    transition: transform 0.4s cubic-bezier(.25, .46, .45, .94);
    --ui-glow-1: Thistle;
    --ui-glow-2: Orchid;
    --ui-glow-3: MediumSlateBlue;
    --ui-glow-4: MediumOrchid
}

@keyframes anim {

    0%,
    100% {
        filter: drop-shadow(0 0 3vmin var(--ui-glow-1)) drop-shadow(0 5vmin 4vmin var(--ui-glow-2)) drop-shadow(2vmin -2vmin 15vmin var(--ui-glow-3)) drop-shadow(0 0 7vmin var(--ui-glow-4))
    }

    30% {
        filter: drop-shadow(0 0 2.5vmin var(--ui-glow-1)) drop-shadow(0 4vmin 3vmin var(--ui-glow-2)) drop-shadow(2vmin -1vmin 10vmin var(--ui-glow-3)) drop-shadow(0 0 5vmin var(--ui-glow-4))
    }

    50% {
        filter: drop-shadow(0 0 2.75vmin var(--ui-glow-1)) drop-shadow(0 4.5vmin 3.7vmin var(--ui-glow-2)) drop-shadow(2vmin -1.5vmin 12vmin var(--ui-glow-3)) drop-shadow(0 0 6vmin var(--ui-glow-4))
    }

    70% {
        filter: drop-shadow(0 0 2.5vmin var(--ui-glow-1)) drop-shadow(0 5vmin 3vmin var(--ui-glow-2)) drop-shadow(2vmin -1vmin 10vmin var(--ui-glow-3)) drop-shadow(0 0 5vmin var(--ui-glow-4))
    }
}

#ui::before {
    animation: anim 12s infinite;
    background-color: rgb(0 0 0);
    background: radial-gradient(ellipse farthest-side at bottom, rgb(0 0 0) 75%, #fff0 100%);
    border-radius: 50% 50% 0% 0%;
    content: "";
    filter: drop-shadow(0 0 3vmin var(--ui-glow-1)) drop-shadow(0 5vmin 4vmin var(--ui-glow-2)) drop-shadow(2vmin -2vmin 15vmin var(--ui-glow-3)) drop-shadow(0 0 7vmin var(--ui-glow-4));
    height: calc(4vmin + 1em);
    position: absolute;
    width: 132%;
    bottom: -30px;
    left: -16%;
    transition: none
}

#ui.sticky {
    position: fixed;
    top: 0;
    bottom: auto;
    background: rgb(12 17 26 / .9);
    backdrop-filter: blur(15px);
    box-shadow: 0 4px 30px rgb(0 0 0 / .5);
    padding: 10px 0
}

#ui.sticky::before {
    transform: translateY(-27px) scale(.9, .25);
    height: .5em;
    transition: transform 0.55s ease-in-out
}

#ui.sticky #info,
#ui.sticky #lang-selector {
    background: #fff0;
    border: none;
    box-shadow: none;
    backdrop-filter: none
}

#ui.sticky .logo img {
    transform: scale(.6) translateY(0);
    mix-blend-mode: screen;
    opacity: .92
}

#info {
    font-size: 14px;
    padding: 10px 18px;
    background-color: rgb(25 30 50 / .35);
    border-radius: 10px;
    text-shadow: 0 0 5px rgb(0 128 255 / .8);
    border: 1px solid rgb(255 255 255 / .1);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    transition: all 0.3s ease;
    box-shadow: inset 0 0 10px rgb(255 255 255 / .05);
    mix-blend-mode: plus-lighter
}

#ui.sticky #info {
    padding: 5px 15px
}

#lang-selector {
    mix-blend-mode: plus-lighter;
    margin-left: 15px;
    font-size: 14px;
    padding: 10px 18px;
    background-color: rgb(25 30 50 / .35);
    border-radius: 10px;
    border: 1px solid rgb(255 255 255 / .1);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    transition: all 0.5s ease;
    pointer-events: auto
}

nav {
    display: inline-block;
    pointer-events: auto
}

nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 15px
}

nav a {
    text-decoration: none;
    font-size: 14px;
    font-weight: 700;
    transition: all 0.5s ease;
    padding: 10px 15px;
    border-radius: 8px;
    border: 1px solid #fff0;
    display: block;
    outline: none
}

nav a span {
    color: #cecece
}

nav a .icon {
    width: 36px;
    height: 36px;
    fill: rgb(173 227 241 / .35);
    display: none
}

nav a:hover {
    color: #fff;
    background-color: rgb(255 255 255 / .05)
}

nav a:active {
    transform: translateY(1px);
    background-color: rgb(255 255 255 / .1)
}

nav a:focus-visible {
    border-color: rgb(0 255 234 / .5);
    box-shadow: 0 0 10px rgb(0 255 234 / .3);
    color: #fff
}

nav a.active {
    color: #a5c1e9;
    text-shadow: 0 0 10px rgb(0 195 255 / .6);
    border-color: rgb(106 117 130 / 51%);
    background-color: rgb(0 255 234 / .05)
}

nav a:hover .icon {
    transform: scale(1.1)
}
/* ... */

